--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,238 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*Alert Clearance Bar*/
+.alert {
+  background-color: #5c00e6;
+  border-style: solid;
+  border-radius: 0px;
+  border-color: #fff;
+  text-align: center;
+}
+
+h9 {
+  font-size: 25px;
+  color: #fff;
+  align-items: center;
+  font-family: "Roboto Mono", monospace;
+}
+
+.rack {
+  text-align: center;
+  color: white;
+}
+
+/*Clearance Bar Blink*/
+blink {
+  /* // for Safari 4.0 - 8.0 */
+  -webkit-animation: 0.5s linear infinite condemned_blink_effect;
+  animation: 0.5s linear infinite condemned_blink_effect;
+}
+
+@-webkit-keyframes condemned_blink_effect {
+  // for Safari 4.0 - 8.0
+  0% {
+    visibility: hidden;
+  }
+
+  50% {
+    visibility: hidden;
+  }
+
+  100% {
+    visibility: visible;
+  }
+}
+
+@keyframes condemned_blink_effect {
+  0% {
+    visibility: hidden;
+  }
+
+  50% {
+    visibility: hidden;
+  }
+
+  100% {
+    visibility: visible;
+  }
+}
+
+/*Navbar*/
+.navbar {
+  background-color: black;
+}
+
+.nav-link {
+  color: #fff;
+  font-family: "Roboto Mono", monospace;
+}
+
+.navbar-toggler {
+  background-color: #fff;
+}
+
+.navbar-tollger-icon {
+  background-color: #5c00e6;
+}
+
+.navbar-brand {
+  max-width: 50%;
+}
+
+/*Navbar Dropdown*/
+.dropdown-menu {
+  background-color: #5c00e6;
+}
+
+.dropdown-item {
+  color: black;
+  font-family: "Roboto Mono", monospace;
+}
+
+.reserve {
+  padding: 20px;
+}
+
+/*Throughout the Website*/
+h1 {
+  text-align: center;
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+}
+
+p {
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Roboto Mono", monospace;
+}
+
+h3 {
+  color: #5c00e6;
+  font-family: "Raleway", sans-serif;
+}
+
+.btn {
+  font-size: 18px;
+  color: #fff;
+  padding: 12px 22px;
+  background-color: #5c00e6;
+  border: 2px solid #fff;
+  font-family: "Raleway", sans-serif;
+}
+
+.container {
+  margin: 4% auto;
+}
+
+/*Carousel on Homepage*/
+/*About The Lost Reserve*/
+h4 {
+  color: #5c00e6;
+  font-family: "Raleway", sans-serif;
+  font-size: 45px;
+}
+
+h10 {
+  color: #fff;
+  font-size: 17px;
+  font-family: "Roboto Mono", monospace;
+}
+
+/*Clearance Card*/
+.sales {
+  background-color: black;
+  text-align: center;
+}
+
+/*Reviews*/
+.reviews {
+  text-align: center;
+}
+
+h2 {
+  font-size: 1.7em;
+}
+
+/*Product Pages*/
+/*Product Cards*/
+.card {
+  background-color: black;
+  align-items: center;
+  color: #5c00e6;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  border: solid;
+  border-color: #5c00e6;
+  margin-bottom: 30px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+  background-color: black;
+}
+
+.card:hover .overlay {
+  opacity: 1;
+}
+
+.text-body {
+  text-align: center;
+}
+
+h5 {
+  color: #5c00e6;
+  font-family: "Roboto Mono", monospace;
+}
+
+h6 {
+  font-size: 25px;
+  color: #5c00e6;
+  font-family: "Roboto Mono", monospace;
+}
+
+/*Footer*/
+footer {
+  width: 100%;
+  background-color: black;
+  padding: 5%;
+  color: #fff;
+  border: solid;
+  border-color: #5c00e6;
+}
+
+.fa {
+  padding: 15px;
+  font-size: 25px;
+  color: #5c00e6;
+}
+
+h11 {
+  color: #5c00e6;
+  font-family: "Roboto Mono", monospace;
+  font-size: 17px;
+}
+
+@media (max-width: 414px) {
+  .chase {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .chase {
+    max-width: 100%;
+  }
 }
