📦  NEW: adds homepage and sales page

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ blink {
 }
 
 @-webkit-keyframes condemned_blink_effect {
-  // for Safari 4.0 - 8.0
+  /* // for Safari 4.0 - 8.0 */
   0% {
     visibility: hidden;
   }
